fix z-index

--- a/src/components/common/cartButton/cartButton.module.css
+++ b/src/components/common/cartButton/cartButton.module.css
@@ -7,7 +7,7 @@
   background-color: var(--white);
   border: 2px solid var(--primary-color);
   border-radius: 50%;
-  z-index: 1;
+  z-index: 2;
   display: flex;
   align-items: center;
   justify-content: center;
